# derby

./: .gitattributes  .gitignore  LICENSE  README.md  app_reset.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js
src/: app.html  app.postcss
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_utils.rs  gpt.rs  main.rs  screenshot.rs  stores.rs  text_to_speech.rs  voice_chat.rs  whisper.rs
src-tauri/swift-library/Sources/swift-library/: swift_library.swift
src/lib/: Bubble.ts  ChatService.ts  GPTContentProcessor.ts  audioTranscriber.ts  storeManager.ts  utils.ts
src/lib/components/: AudioTranscriberButton.svelte  ChatBubble.svelte  ChatInput.svelte  GuestBubble.svelte  HostBubble.svelte  LoadingDots.svelte
src/lib/components/ui/progress/: index.ts  progress.svelte
src/lib/components/ui/textarea/: Textarea.svelte  index.ts
src/lib/types/: message.ts  word.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/first_run/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/tester/: +page.svelte
src/routes/transcription/: +page.svelte
