[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "http-all", "notification-all", "path-all", "window-all", "global-shortcut-all", "macos-private-api", "fs-all", "system-tray", "icon-png"] }
dotenv = "0.15.0"
async-openai = "0.15"
tokio = "1.29.1"
chrono = "0.4.26"
dirs = "5.0"
tauri-plugin-positioner = "1.0.4"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "download-throttled-events" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "master" }
cpal = "0.15.2"
anyhow = "1.0.75"
ringbuf = "0.3.3"
async-stream = "0.3.5"
futures = "0.3.28"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rodio = "0.17.1"
bytes = "1.5.0"
rubato = "0.14.1"
samplerate = "0.2.4"
once_cell = "1.18.0"
global-hotkey = "0.3.0"
repng = "0.2.2"
tts = "0.25.6"
objc = "0.2.7"
cocoa-foundation = "0.1.2"
screenshots = "0.8.5"
crossbeam = "0.8.2"
hound = "3.5.1"
base64 = "0.21.5"
futures-util = "0.3.29"
log = "0.4.20"
cocoa = "0.25.0"
block = "0.1.6"
sha1 = "0.10.6"
tempfile = "3.8.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
